--- a/notebook/Processing.ipynb
+++ b/notebook/Processing.ipynb
@@ -564,14 +564,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mehdy\\AppData\\Local\\Temp\\ipykernel_18372\\473817478.py:2: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\mehdy\\AppData\\Local\\Temp\\ipykernel_1632\\473817478.py:2: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  defog_val = defog[defog.Valid == True][defog.Task == True]\n"
      ]
     },
@@ -848,7 +848,7 @@
        "[4111322 rows x 14 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,14 +861,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mehdy\\AppData\\Local\\Temp\\ipykernel_18372\\1441729205.py:1: FutureWarning: Passing a set as an indexer is deprecated and will raise in a future version. Use a list instead.\n",
+      "C:\\Users\\mehdy\\AppData\\Local\\Temp\\ipykernel_1632\\1441729205.py:1: FutureWarning: Passing a set as an indexer is deprecated and will raise in a future version. Use a list instead.\n",
       "  defog_notype = defog.loc[set(defog.index)- set(defog_val.index)]\n"
      ]
     },
@@ -1145,7 +1145,7 @@
        "[9414380 rows x 14 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1166,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1411,7 +1411,7 @@
        "[4111322 rows x 10 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1498,7 @@
        "AccAP -0.226019  0.244200 -5.118650 -0.363919 -0.250000 -0.113508  4.388132"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1529,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1573,7 +1573,7 @@
        "Text(0.5, 0.98, 'Density plots and barplots of variables.png')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1628,12 +1628,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Basic prediction multilabel"
+    "### Basic prediction multilabel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1836,7 +1836,24 @@
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "rf1 = DecisionTreeClassifier(random_state=42)\n",
     "rf1.fit(Xtrain1, ytrain1)\n",
@@ -1851,8 +1868,16 @@
    "source": []
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Defog"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1861,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1875,7 +1900,310 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ytrain = ytrain.astype('int')"
+    "ytrain = ytrain.astype('int')\n",
+    "y = y.astype('int')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time</th>\n",
+       "      <th>AccV</th>\n",
+       "      <th>AccML</th>\n",
+       "      <th>AccAP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>-0.970018</td>\n",
+       "      <td>0.061626</td>\n",
+       "      <td>-0.265625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1001</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>-0.984375</td>\n",
+       "      <td>0.044497</td>\n",
+       "      <td>-0.265625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1002</th>\n",
+       "      <td>1002</td>\n",
+       "      <td>-0.984375</td>\n",
+       "      <td>0.029016</td>\n",
+       "      <td>-0.265625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1003</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>-0.984375</td>\n",
+       "      <td>0.015625</td>\n",
+       "      <td>-0.265625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1004</th>\n",
+       "      <td>1004</td>\n",
+       "      <td>-0.984670</td>\n",
+       "      <td>0.015330</td>\n",
+       "      <td>-0.265625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13524697</th>\n",
+       "      <td>119027</td>\n",
+       "      <td>-0.961216</td>\n",
+       "      <td>0.142428</td>\n",
+       "      <td>-0.289655</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13524698</th>\n",
+       "      <td>119028</td>\n",
+       "      <td>-0.960343</td>\n",
+       "      <td>0.142836</td>\n",
+       "      <td>-0.290506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13524699</th>\n",
+       "      <td>119029</td>\n",
+       "      <td>-0.957958</td>\n",
+       "      <td>0.145494</td>\n",
+       "      <td>-0.290007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13524700</th>\n",
+       "      <td>119030</td>\n",
+       "      <td>-0.960616</td>\n",
+       "      <td>0.145839</td>\n",
+       "      <td>-0.291527</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13524701</th>\n",
+       "      <td>119031</td>\n",
+       "      <td>-0.967076</td>\n",
+       "      <td>0.144342</td>\n",
+       "      <td>-0.292384</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4111322 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Time      AccV     AccML     AccAP\n",
+       "1000        1000 -0.970018  0.061626 -0.265625\n",
+       "1001        1001 -0.984375  0.044497 -0.265625\n",
+       "1002        1002 -0.984375  0.029016 -0.265625\n",
+       "1003        1003 -0.984375  0.015625 -0.265625\n",
+       "1004        1004 -0.984670  0.015330 -0.265625\n",
+       "...          ...       ...       ...       ...\n",
+       "13524697  119027 -0.961216  0.142428 -0.289655\n",
+       "13524698  119028 -0.960343  0.142836 -0.290506\n",
+       "13524699  119029 -0.957958  0.145494 -0.290007\n",
+       "13524700  119030 -0.960616  0.145839 -0.291527\n",
+       "13524701  119031 -0.967076  0.144342 -0.292384\n",
+       "\n",
+       "[4111322 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time</th>\n",
+       "      <th>AccV</th>\n",
+       "      <th>AccML</th>\n",
+       "      <th>AccAP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.914652</td>\n",
+       "      <td>-0.300851</td>\n",
+       "      <td>0.298156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-0.914367</td>\n",
+       "      <td>-0.301572</td>\n",
+       "      <td>0.298325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.779540</td>\n",
+       "      <td>-0.343197</td>\n",
+       "      <td>0.275690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.993162</td>\n",
+       "      <td>-0.270281</td>\n",
+       "      <td>0.315775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-0.948767</td>\n",
+       "      <td>-0.307849</td>\n",
+       "      <td>0.297191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>281683</th>\n",
+       "      <td>281683</td>\n",
+       "      <td>-0.899299</td>\n",
+       "      <td>-0.232668</td>\n",
+       "      <td>0.389147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>281684</th>\n",
+       "      <td>281684</td>\n",
+       "      <td>-0.901973</td>\n",
+       "      <td>-0.233051</td>\n",
+       "      <td>0.390114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>281685</th>\n",
+       "      <td>281685</td>\n",
+       "      <td>-0.901690</td>\n",
+       "      <td>-0.231888</td>\n",
+       "      <td>0.391896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>281686</th>\n",
+       "      <td>281686</td>\n",
+       "      <td>-0.899576</td>\n",
+       "      <td>-0.232429</td>\n",
+       "      <td>0.391106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>281687</th>\n",
+       "      <td>281687</td>\n",
+       "      <td>-0.900289</td>\n",
+       "      <td>-0.232363</td>\n",
+       "      <td>0.390735</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>281688 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Time      AccV     AccML     AccAP\n",
+       "0            0 -0.914652 -0.300851  0.298156\n",
+       "1            1 -0.914367 -0.301572  0.298325\n",
+       "2            2 -0.779540 -0.343197  0.275690\n",
+       "3            3 -0.993162 -0.270281  0.315775\n",
+       "4            4 -0.948767 -0.307849  0.297191\n",
+       "...        ...       ...       ...       ...\n",
+       "281683  281683 -0.899299 -0.232668  0.389147\n",
+       "281684  281684 -0.901973 -0.233051  0.390114\n",
+       "281685  281685 -0.901690 -0.231888  0.391896\n",
+       "281686  281686 -0.899576 -0.232429  0.391106\n",
+       "281687  281687 -0.900289 -0.232363  0.390735\n",
+       "\n",
+       "[281688 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "defog_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = y.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf = DecisionTreeClassifier()\n",
+    "rf.fit(X, y)\n",
+    "ypred = rf.predict(defog_test)"
    ]
   },
   {
